feat: enhance Booking and ChargingStation services with new review functionality and improve price/consumption precision